📝 draft: project structure done, pages, state management added, still need to style the components

--- a/src/global/globals.css
+++ b/src/global/globals.css
@@ -12,8 +12,12 @@
 
 html,
 body {
+  display: flex;
+  height: 100vh;
   max-width: 100vw;
   overflow-x: hidden;
+  align-items: center;
+  justify-content: center;
 }
 
 body {
